<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roots</string>
    <string name="app_name_roots_counselor">Roots Counselor</string>
    <string name="conversations">Conversations</string>
    <string name="reportedids">Reported Users</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Navigation drawer opened</string>
    <string name="drawer_close">Navigation drawer closed</string>
    <string-array name="left_drawer_options">
        <item>Logout</item>
        <item>About Roots</item>
    </string-array>
    <string-array name="left_drawer_options_counselor">
        <item>Logout</item>
        <item>Settings</item>
    </string-array>
    <string-array name="right_drawer_options">
        <!--settings for students?-->
    </string-array>
    <string-array name="right_drawer_options_counselor">
        <item>Available</item>
    </string-array>

    <string name="c_login"><u>Log in as a Counselor</u></string>
    <string name="s_login"><u>Log in as a Student</u></string>
    <string name="get_started_description">Talk to counselors you know, anonymously.</string>
    <string name="school_choice_description">What school do you go to?</string>
    <string name="dialog_welcome_student">Welcome to Team Roots! Tap a counselor\'s picture to start a conversation.</string>
    <string name="dialog_welcome_student_view_messages_act">Displayed is this counselor\'s bio. You can swipe to the right to hide it.</string>
    <string name="dialog_welcome_counselor">Welcome to Team Roots! Students will message you anonymously. You can tell students you are unavailable to talk to in settings.</string>
    <string name="no_internet_connection">Please check your internet connection and try again.</string>
    <string name="feature_not_available_warning">Feature not available in beta test.</string>
    <string name="title_activity_counselor_view_messages">CounselorViewMessagesActivity</string>
    <string name="call">Call</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="get_started">Get Started</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_id">Student ID</string>
    <string name="next">Next</string>
    <string name="no_school">Don\'t see your school?</string>
    <string name="student_or_counselor">Are you a student or a counselor?</string>
    <string name="back">Back</string>
    <string name="restricted">You are restricted from logging in on the demo version.</string>


    <string-array name="atlas_typing_indicator">
        <item>No one is typing</item>
        <item>%s is typing…</item>
        <item>Two people are typing…</item>
        <item>Three people are typing…</item>
        <item>Many people are typing…</item>
    </string-array>
    <string name="no_conversation_description_counselor">No one has messaged you yet. </string>
    <string name="ok">OK</string>
    <string name="report">REPORT</string>
    <string name="undo">UNDO</string>
    <string name="report_warning"> Are you sure you want to report this student?</string>
    <string name="undo_warning"> Are you sure you want to undo your report?</string>
    <string name="no_reports_description">Good news! No student has been reported yet. </string>
    <string name="no_conversation_description">No conversations yet. Tap one of the faces above. :)</string>
    <string name="no_messages_description">What\'s up? Tap the bottom message bar to start typing.</string>

</resources>
