<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@color/roots_green"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">


        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/roots_in_circ"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:text="@string/student_or_counselor"/>

    </LinearLayout>

    <ListView
        android:layout_height="0dp"
        android:id="@+id/list_view_account_types"
        android:layout_width="match_parent"
        android:layout_weight="2.5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <Button android:id="@+id/accounttypeselectionnext" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/next"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="@color/roots_green_lighter" />



    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backaccounttype"
        android:layout_marginTop="20dp"
        android:textColor="#ffffffff" />

</LinearLayout>