






<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_launcherweb"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/logindescription"
            style="@style/descriptionFont"
            android:text="Text Replace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">



        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="invisible"

                />
            <com.team.roots.MyClearEditText android:id="@+id/loginedittext" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_id"
                android:imeOptions="actionGo"
                android:maxLines="1" android:singleLine="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
                android:inputType="phone"
                android:textSize="26sp"
                android:textColorHint="@color/roots_gray"
                android:textColor="@color/roots_green"
                android:gravity="center"
                android:cursorVisible="false"
                android:selectAllOnFocus="false" />

           <com.team.roots.MyClearEditText  android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
               android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
                 android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/roots_gray"
                android:textColor="@color/roots_green"
               android:gravity="left"
               android:cursorVisible="true"

               android:clickable="true"
               android:textIsSelectable="false"
               android:textCursorDrawable="@null"
               android:enabled="true"
               android:focusable="true"
               android:inputType="textEmailAddress" />

            <com.team.roots.MyClearEditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeOptions="actionGo" android:inputType="textVisiblePassword"
                 android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/roots_gray"
                android:textColor="@color/roots_green"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
                android:gravity="left"
                android:focusable="true"
                android:textCursorDrawable="@null"
                android:clickable="true"
                android:enabled="true" />


        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/loginbutton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            style="@style/navButton"/>



    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back_school_login"
        style="@style/lightdescriptionFont"
        android:layout_marginTop="20dp" />
</LinearLayout>











