<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">


        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_launcherweb"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/descriptionFont"
            android:text="@string/school_choice_description"/>

    </LinearLayout>

    <!--Visibility for loading sign will be set to gone after school list loads-->
    <ProgressBar
        android:id="@+id/loading_sign_for_schools"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:layout_weight="2"
        android:visibility="visible"/>

    <!--Will be set to VISIBLE after schools load-->
    <ListView
        android:layout_height="0dp"
        android:id="@+id/list_view_schools"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:visibility="gone"
        android:paddingBottom="20dp"/>
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/no_school"-->
        <!--android:id="@+id/counselorlogin"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:textColor="#ffffffff" />-->



        <Button android:id="@+id/schoolselectionnext" style="@style/navButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="20dp"
             />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back_school_selection"
        style="@style/lightdescriptionFont"
        android:layout_marginTop="20dp"/>




</LinearLayout>